test/testdata/classes/methods/static/access_from_instance_error.lox
class Foo {
  static bar() {}
}

Foo().bar(); // error: 'Foo' object has no property bar
